--- a/Resources/Public/Css/main.css
+++ b/Resources/Public/Css/main.css
@@ -23,7 +23,6 @@ div.sticky{
 
 .field-info-text p {
     font-size: 14px;
-    color: #444;
     margin-bottom: 0;
     margin-top: 12px;
     display: inline-block;
